// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Filter displays correct translations 1`] = `
<div>
  <span>
    Show fertig
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiSwitch-switchBase MuiSwitch-colorPrimary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            className="MuiSwitch-thumb"
          />
          <input
            checked={false}
            className="PrivateSwitchBase-input-16 MuiSwitch-input"
            id="todoStateSwitch"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-track"
      />
    </span>
  </label>
</div>
`;

exports[`A Filter renders component 1`] = `
<div>
  <span>
    Show Done
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiSwitch-switchBase MuiSwitch-colorPrimary"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            className="MuiSwitch-thumb"
          />
          <input
            checked={false}
            className="PrivateSwitchBase-input-16 MuiSwitch-input"
            id="todoStateSwitch"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-track"
      />
    </span>
  </label>
</div>
`;

exports[`A Filter selects a button based on the value of its 'filter' prop 1`] = `
<div>
  <span>
    Show Done
  </span>
  <label
    htmlFor="todoStateSwitch"
  >
    <span
      className="MuiSwitch-root"
    >
      <span
        aria-disabled={false}
        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-checked-14 Mui-checked"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            className="MuiSwitch-thumb"
          />
          <input
            checked={true}
            className="PrivateSwitchBase-input-16 MuiSwitch-input"
            id="todoStateSwitch"
            onChange={[Function]}
            type="checkbox"
          />
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </span>
      <span
        className="MuiSwitch-track"
      />
    </span>
  </label>
</div>
`;
